<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.onelogin</groupId>
	<artifactId>java-saml-toolkit</artifactId>
	<version>2.9.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>java-saml Toolkit Project</name>
	<description>A Java SAML toolkit</description>
	<url>https://github.com/saml-toolkit/java-saml</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
                <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
		<!-- Compile for Java 21 (LTS); the artifacts run unchanged on JRE 25. -->
		<maven.compiler.release>21</maven.compiler.release>

		<slf4jVersion>2.0.18</slf4jVersion>
		<junitVersion>4.13.2</junitVersion>
		<logbackVersion>1.5.38</logbackVersion>
		<apacheCommonsLangVersion>3.20.0</apacheCommonsLangVersion>
		<apacheCommonsCodecVersion>1.22.1</apacheCommonsCodecVersion>
		<xmlsecVersion>4.0.4</xmlsecVersion>
		<jakartaServletVersion>6.1.0</jakartaServletVersion>
		<mockitoVersion>5.23.0</mockitoVersion>
		<hamcrestVersion>3.0</hamcrestVersion>
		<azureKeyvaultKeysVersion>4.11.2</azureKeyvaultKeysVersion>
		<azureIdentityVersion>1.18.6</azureIdentityVersion>
		<jacocoVersion>0.8.15</jacocoVersion>
		<nettyVersion>4.1.137.Final</nettyVersion>
	</properties>

	<modules>
		<module>core</module>
		<module>toolkit</module>
		<module>samples</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<!--
			  Netty arrives transitively through the optional Azure Key Vault
			  dependency. Azure's own BOM leaves the DNS modules a couple of
			  patch releases behind the rest of Netty, which keeps a known
			  advisory (CVE-2026-73508) in the tree. Importing the Netty BOM
			  pins every Netty module to one current version.
			-->
			<dependency>
				<groupId>io.netty</groupId>
				<artifactId>netty-bom</artifactId>
				<version>${nettyVersion}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- for test -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junitVersion}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>${mockitoVersion}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest-core</artifactId>
				<version>${hamcrestVersion}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest-library</artifactId>
				<version>${hamcrestVersion}</version>
				<scope>test</scope>
			</dependency>
			<!-- for log -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4jVersion}</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>${logbackVersion}</version>
				<optional>true</optional>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.6.3</version>
				<executions>
					<execution>
						<id>enforce-versions</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<fail>true</fail>
							<rules>
								<requireMavenVersion>
									<version>3.6.3</version>
								</requireMavenVersion>
								<requireJavaVersion>
									<!-- Java 21 is the compile baseline; JDK 25 is the tested build JDK. -->
									<version>[21,)</version>
								</requireJavaVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.owasp</groupId>
				<artifactId>dependency-check-maven</artifactId>
				<version>13.0.0</version>
				<configuration>
					<failBuildOnCVSS>7</failBuildOnCVSS>
					<suppressionFiles>
						<suppressionFile>.nvd-suppressions.xml</suppressionFile>
					</suppressionFiles>
					<assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					 </execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.16.0</version>
					<configuration>
						<release>${maven.compiler.release}</release>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>3.3.1</version>
					<configuration>
						<autoVersionSubmodules>true</autoVersionSubmodules>
						<useReleaseProfile>false</useReleaseProfile>
						<releaseProfiles>release</releaseProfiles>
						<goals>deploy</goals>
						<tagNameFormat>v@{project.version}</tagNameFormat>
						<arguments>-Prelease</arguments>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<distributionManagement>
		<repository>
			<id>sonatype-nexus-staging</id>
			<name>Nexus Release Repository</name>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
		<snapshotRepository>
			<id>sonatype-nexus-snapshots</id>
			<name>Sonatype Nexus Snapshots</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

	<scm>
		<connection>scm:git:git@github.com:saml-toolkit/java-saml.git</connection>
		<developerConnection>scm:git:git@github.com:saml-toolkit/java-saml.git</developerConnection>
		<url>https://github.com/saml-toolkit/java-saml</url>
		<tag>HEAD</tag>
	</scm>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://opensource.org/licenses/MIT</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Sixto Martín García</name>
			<url>https://github.com/pitbulk</url>
			<organization>SAML Toolkit</organization>
		</developer>
	</developers>

	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.4.0</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.12.0</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<configuration>
									<doclint>none</doclint>
								</configuration>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.2.8</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
